@@ -21,13 +21,18 @@
 
 package cascading.tuple;
 
+import java.io.Serializable;
+import java.io.StringReader;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.Formatter;
+import java.util.Iterator;
+import java.util.List;
+import java.util.Scanner;
+
 import cascading.operation.Aggregator;
 import cascading.pipe.Pipe;
 import cascading.util.Util;
-
-import java.io.Serializable;
-import java.io.StringReader;
-import java.util.*;
 
 /**
  * A Tuple represents a set of values. Consider a Tuple the same as a data base record where every value is a column in that table.
@@ -769,6 +774,8 @@ public class Tuple implements Comparable, Iterable, Serializable
 
       if( element instanceof Tuple )
         ( (Tuple) element ).print( buffer );
+      else if( element == null ) // don't quote nulls to distinguish from null strings
+        buffer.append( element );
       else
         buffer.append( "\'" ).append( element ).append( "\'" );
 
